# mcp-for-beginners

./: .gitignore  Cargo.toml  readme.md
calculator-client/: Cargo.toml
calculator-client/src/: main.rs
calculator-llmclient/: Cargo.toml
calculator-llmclient/src/: main.rs
calculator-server/: Cargo.toml
calculator-server/src/: main.rs
