[package]
name = "calculator-llmclient"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.29.3", features = ["byot"] }
rmcp = { version = "0.6.4", features = ["client", "transport-child-process"] }
serde_json = "1.0.144"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
